Accessibility and alignment fixes

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -165,10 +165,10 @@
     border: 1px solid #fff;
     background: rgb(118, 118, 118);
     border-radius: 50%;
-    bottom: 22px;
+    bottom: 18px;
     font-size: 12px;
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     padding-top: 1px;
     position: absolute;
     right: 10px;
