--- a/css/mdlstyles.css
+++ b/css/mdlstyles.css
@@ -130,7 +130,7 @@ aside {
 }
 .mdl-demo .mdl-card__actions {
   margin: 0;
-  padding: 4px 40px;
+  padding: 30px 40px;
   color: inherit;
 }
 .mdl-demo .mdl-card__actions a {
